implement add a new comment
